[package]
name = "email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.1", features = ["full"] }
# tokio-util = "0.7.4"
# futures = "*"
# futures-util = {version = "0.3.24", features = ["sink"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
# actix-web = { version = "4.2.1", features = ["openssl"] }
# actix-session = "0.6.1"
quoted_printable = "0.4.5"
encoding = "0.2.33"
base64 = "0.13.0"
bytes = "1.2.1"
tokio-timer = "0.2.13"
# clap = {version = "4.0.19", features = ["derive", "env"]}
# aquamarine = "0.1.12"
# cargo-docs = "0.1.23"
# async-recursion = "1.0.0"

# benchmark
# [dev-dependencies]
# criterion = { version = "0.3.5", features = ["async_tokio", "html_reports"] }

# [[bench]]
# name = "tokio"
# harness = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
