[package]
name = "email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
quoted_printable = "0.4.5"
tokio-timer = "0.2.13"
encoding = "0.2.33"
base64 = "0.13.0"
serde_json = "*"
bytes = "1.2.1"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
